--- a/S04 - Text Classification/BLU08 - Dimensionality Reduction/Exercise notebook.ipynb
+++ b/S04 - Text Classification/BLU08 - Dimensionality Reduction/Exercise notebook.ipynb
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -378,7 +378,7 @@
        "4            0  much stereotypical tastes storyline unbelievab..."
       ]
      },
-     "execution_count": 38,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -505,6 +505,11 @@
     "    \n",
     "    # YOUR CODE HERE\n",
     "    # raise NotImplementedError()\n",
+    "    clf = MultinomialNB()\n",
+    "    clf.fit(X_train_vec, y_train)\n",
+    "\n",
+    "    y_pred = clf.predict(X_test_vec)\n",
+    "    precision, recall = get_precision_recall(y_test, y_pred)\n",
     "\n",
     "    return clf, y_pred, precision, recall"
    ]
@@ -529,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -605,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -618,7 +623,17 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of features: 44103\n",
+      "Baseline precision: 0.6274292059966685\n",
+      "Baseline recall: 0.7040498442367601\n"
+     ]
+    }
+   ],
    "source": [
     "df = load_data()\n",
     "\n",
@@ -656,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -669,7 +684,17 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of features: 43290\n",
+      "Baseline precision: 0.6101159114857745\n",
+      "Baseline recall: 0.7214953271028037\n"
+     ]
+    }
+   ],
    "source": [
     "df_prep = load_preprocessed_data()\n",
     "\n",
@@ -749,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -779,14 +804,17 @@
     "    \"\"\"\n",
     "    \n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
-    "\n",
+    "    # raise NotImplementedError()\n",
+    "    vectorizer = TfidfVectorizer(max_features=top_features)\n",
+    "    vectorizer.fit(X_train)\n",
+    "    # ngrams_sorted = pd.Series(vectorizer.idf_, index=vectorizer.get_feature_names()).sort_values(ascending=False).head(top_features).index.to_list()\n",
+    "    ngrams_sorted = pd.DataFrame({\"idf\": vectorizer.idf_,\"feat_names\": vectorizer.get_feature_names()}).sort_values(by=[\"idf\", \"feat_names\"], ascending=[False, True]).feat_names.to_list()\n",
     "    return vectorizer, ngrams_sorted\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -828,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -841,7 +869,16 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30 most secific features:\n",
+      "['quot', 'war', 'young', 'loved', 'seems', 'stories', 'point', 'must', 'ever', 'old', 'pages', 'different', 'quite', 'come', 'family', 'without', 'last', 'feel', 'times', 'enjoyed', 'enough', 'bit', 'history', 'give', 'right', 'every', 'may', 'part', 'recommend', 'take']\n"
+     ]
+    }
+   ],
    "source": [
     "df_preprocessed = load_preprocessed_data()\n",
     "\n",
@@ -916,7 +953,7 @@
     "recall_values = []\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()\n"
+    "# raise NotImplementedError()\n"
    ]
   },
   {
