--- a/S04 - Text Classification/BLU08 - Dimensionality Reduction/Exercise notebook.ipynb
+++ b/S04 - Text Classification/BLU08 - Dimensionality Reduction/Exercise notebook.ipynb
@@ -774,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 11,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -814,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 12,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -856,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 13,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -919,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -948,17 +948,29 @@
     "# 3. Obtain precision and recall\n",
     "# 4. Store the lists of feature length, precision and recall values \n",
     "\n",
-    "feature_lengths = []\n",
+    "\n",
+    "feature_lengths = [50, 100, 500, 1000, 2000, 5000, 10000]\n",
     "precision_values = []\n",
     "recall_values = []\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "# raise NotImplementedError()\n"
+    "# raise NotImplementedError()\n",
+    "for feat_size in feature_lengths:\n",
+    "    vectorizer, sorted_n_grams = get_tfidf_ngrams_sorted_by_idf(X_train, top_features=feat_size)\n",
+    "    X_train_vectorized = vectorizer.transform(X_train)\n",
+    "    X_test_vectorized = vectorizer.transform(X_test)\n",
+    "    clf = MultinomialNB()\n",
+    "    clf.fit(X_train_vectorized, y_train)\n",
+    "    y_pred = clf.predict(X_test_vectorized)\n",
+    "\n",
+    "    precision, recall = get_precision_recall(y_test, y_pred)\n",
+    "    precision_values.append(precision)\n",
+    "    recall_values.append(recall)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1003,7 +1015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1016,12 +1028,55 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of features: 50\n",
+      "Precision: 0.5735359856951274\n",
+      "Recall: 0.7993769470404984\n",
+      "F1: 0.333940655908381\n",
+      "==============================\n",
+      "Number of features: 100\n",
+      "Precision: 0.5740824648844586\n",
+      "Recall: 0.7894080996884735\n",
+      "F1: 0.3323714585519413\n",
+      "==============================\n",
+      "Number of features: 500\n",
+      "Precision: 0.5925\n",
+      "Recall: 0.7383177570093458\n",
+      "F1: 0.3287101248266297\n",
+      "==============================\n",
+      "Number of features: 1000\n",
+      "Precision: 0.6041666666666666\n",
+      "Recall: 0.7227414330218068\n",
+      "F1: 0.32907801418439714\n",
+      "==============================\n",
+      "Number of features: 2000\n",
+      "Precision: 0.6114101184068891\n",
+      "Recall: 0.7077881619937695\n",
+      "F1: 0.32803927230724805\n",
+      "==============================\n",
+      "Number of features: 5000\n",
+      "Precision: 0.6132125732551944\n",
+      "Recall: 0.7171339563862928\n",
+      "F1: 0.3305571510626077\n",
+      "==============================\n",
+      "Number of features: 10000\n",
+      "Precision: 0.60205078125\n",
+      "Recall: 0.7682242990654206\n",
+      "F1: 0.3375307966055297\n",
+      "==============================\n"
+     ]
+    }
+   ],
    "source": [
     "for n_features, precision, recall in zip(feature_lengths, precision_values, recall_values):\n",
     "    print(f\"Number of features: {n_features}\")\n",
     "    print(f\"Precision: {precision}\")    \n",
     "    print(f\"Recall: {recall}\")\n",
+    "    print(f\"F1: {(recall*precision)/(recall+precision)}\")\n",
     "    print(\"==============================\")\n"
    ]
   },
@@ -1045,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1059,14 +1114,14 @@
    },
    "outputs": [],
    "source": [
-    "# num_features_highest_precision = ... # numeric value\n",
+    "num_features_highest_precision = 5000 # numeric value\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# raise NotImplementedError()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1106,7 +1161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1120,14 +1175,14 @@
    },
    "outputs": [],
    "source": [
-    "# num_features_highest_recall = ... # numeric value\n",
+    "num_features_highest_recall = 50 # numeric value\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# raise NotImplementedError()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1167,7 +1222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1181,14 +1236,14 @@
    },
    "outputs": [],
    "source": [
-    "# num_features_highest_f1 = ... # numeric value\n",
+    "num_features_highest_f1 = 10000 # numeric value\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# raise NotImplementedError()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1228,7 +1283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1242,14 +1297,14 @@
    },
    "outputs": [],
    "source": [
-    "# choice_model = ...  # answer with 'precision', 'recall', 'f1-score'\n",
+    "choice_model = 'precision'  # answer with 'precision', 'recall', 'f1-score'\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# raise NotImplementedError()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2296,11 +2351,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.8.10"
   },
   "vscode": {
    "interpreter": {
-    "hash": "16ca2675aa3ddeb0d45eeb5d75f16c9dd193af781cc0e052cb25b0d4fc9a734c"
+    "hash": "5fae7c60a889a1c44cd9d6df37d8c43ead0a66d7ac437d2c49311bb037c3bf23"
    }
   }
  },
